2010-01-02  Dirk Bergstrom  <krid@otisbean.com>

    * app/views/help/help-scene.html: Update changelog.

Closes GH-6 - Importer should ignore leading and traling junk
    * app/models/ring.js (importData): Strip non-JSON junk from the import
    data before parsing.
    
    * app/assistants/actions-assistant.js (importFileOrUrl): Fix broken logic
    for detecting file import and prepending slash.

    * appinfo.js: Bump version for release.

2010-01-01  Dirk Bergstrom  <krid@otisbean.com>

    * app/views/help/help-scene.html: Update changelog.

    * stylesheets/keyring.css: Reduce indent on help scene lists.
    
    * appinfo.js: Bump version for release.

Closes gh-4: Remove upgrade support for v0.0.1 db format
    * app/models/ring.js (_startDepotLoad): Do first-run tasks if no depot
    data is found.
    (_loadDataHandler): Remove first-run code and other legacy stuff.
    Add or enchance comments on a few methods.

    * app/models/upgrader.js: Remove version 0 upgrader, add comments.

Closes gh-2: Can't have more than 10 categories
    * app/models/ring.js (editCategory): Sort numerically instead of lexically
    when finding next available index.  Add logging.
    (categoriesForMojo): Sort numerically instead of lexically.
    (deleteCategory): Remove unused count of affected records.  Add logging.

    * app/assistants/categories-assistant.js (CategoryDialogAssistant.save):
    Remove log call.

Closes gh-1: Can't delete first item on item-list
    * stylesheets/keyring.css (#status): Change float: left to text-align: left.

Closes gh-3: Import from clipboard borken
    * app/assistants/actions-assistant.js (ImportExportDialogAssistant.setup):
    Make the 'data' input accept & display multi-line text.
    
    * app/views/actions/import-export-dialog.html: Add an id to the data
    input div, so we can control its size.    

    * stylesheets/keyring.css (#import-data-div): Add max-height to input div,