@@ -136,8 +136,14 @@ AppEngine service.</li>
 <div class="palm-info-text">
 <h4>Change Log</h4>
 <ul>
+<li>Version 0.1.3 - 2010-01-03<br />
+ - Work around a webOS 1.3.5 bug in JSON.parse that was breaking categories
+ on import. 
+</li>
+
 <li>Version 0.1.2 - 2010-01-02<br />
- - Fixed clipboard import bug for real this time.
+ - Import now cleans data before attempting to parse, making import-from-clipboard
+ more robust. 
 </li>
 
 <li>Version 0.1.1 - 2010-01-01<br />
